<resources>
    <string name="app_name">Med Manager</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_add_drug">Add Drug</string>
    <string name="confirm_registry">Email not found. You want to create a new user with that email and password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userReportUpdate">User Added!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="action_settings">User Profile</string>
    <string name="date">%1$d/%2$d/%3$d</string>
    <string name="title_activity_drug_detail_activty">Drug Details</string>
    <string name="drug_description">Drug Description:</string>
    <string name="drug_description_hint">Drug Description</string>
    <string name="name_of_drug">Name of Drug:</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="select_a_medication_interval">Select a medication interval:</string>
    <string name="name_of_drug_hint">Name of Drug</string>
    <string name="enter_end_date_hint">Enter end date</string>
    <string name="mainPage_intervalTextView">Medication Interval  %d</string>
    <string name="mainView_durationTextView">Duration %d days</string>
    <string name="mainView_StartTextView">Starts: %s</string>
    <string name="mainView_EndTextView">Ends: %s</string>
    <string name="notificatio_title">Medication Notice</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_search">Search</string>
    <string name="med_manager_signin">Med Manager Signin</string>
    <string name="add_new_drug">Add New Drug</string>
    <string name="name_of_drug_2">Name of Drug:</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_settings">User Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
